cluster-config/dev/find/extract/prod/container/container.yaml
---
---
# Source: container/templates/container-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: extract
    app.kubernetes.io/instance: extract-prod
  name: extract-prod
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: extract
    app.kubernetes.io/instance: extract-prod
---

# Source: container/templates/container-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extract-prod
  namespace: default
  labels:
    app.kubernetes.io/name: extract
    app.kubernetes.io/instance: extract-prod
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: extract
      app.kubernetes.io/instance: extract-prod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: extract
        app.kubernetes.io/instance: extract-prod
    spec:
      containers:
      - name: extract
        image: episerver.azurecr.io/episerver/find-services-extract:0.1-develop-47601
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "500m"
            memory: "1.5Gi"
          requests:
            cpu: "300m"
            memory: "1.2Gi"
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 60
          timeoutSeconds: 2
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: azure
          mountPath: /mnt/azure
      restartPolicy: Always
      imagePullSecrets:
      - name: acr-auth
      volumes:
      - name: azure
        azureFile:
          secretName: fileshare-secrets
          shareName: optiq-logs-prod
          readOnly: false
status: {}
---

# Source: container/templates/container-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-extract-prod
  namespace: default
spec:
  entryPoints:
    - https
    - internal-http
  tls:
    store: 
      name: default
  routes:
  - match: 'PathPrefix(`/extract`) && Headers(`Ring`, `prod`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: rate-limiter
    services:
    - name: extract-prod
      port: 80
      namespace: default
  - match: 'PathPrefix(`/extract`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: rate-limiter
    services:
    - name: extract-prod
      port: 80
      namespace: default
---

# Source: container/templates/container-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-extract-prod-swagger
  namespace: default
spec:
  entryPoints:
    - https
    - internal-http
  tls:
    store: 
      name: default
  routes:
  - match: 'PathPrefix(`/extract-api/swagger`) && Headers(`Ring`, `prod`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: strip-extract-prod-api-prefix
    services:
    - name: extract-prod
      port: 80
      namespace: default
  - match: 'PathPrefix(`/extract-api/swagger`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: strip-extract-prod-api-prefix
    services:
    - name: extract-prod
      port: 80
      namespace: default
---

# Source: container/templates/container-service-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-extract-prod-health
  namespace: default
spec:
  entryPoints:
    - https
    - internal-http
  tls:
    store: 
      name: default
  routes:
  - match: 'PathPrefix(`/extract-service/health`) && Headers(`Ring`, `prod`)'
    kind: Rule
    middlewares:
    - name: replace-extract-prod-service-health-path
    services:
    - name: extract-prod
      port: 80
      namespace: default
  - match: 'PathPrefix(`/extract-service/health`)'
    kind: Rule
    middlewares:
    - name: replace-extract-prod-service-health-path
    services:
    - name: extract-prod
      port: 80
      namespace: default
---

# Source: container/templates/container-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-extract-prod-api-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /extract-api/
---

# Source: container/templates/container-service-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: replace-extract-prod-service-health-path
  namespace: default
spec:
  replacePath:
    path: /health
